<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/inicio_ifood3"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/cardview_light_background"
        android:drawableStart="@drawable/ic_user_icon"
        android:drawableLeft="@drawable/ic_user_icon"
        android:ems="10"
        android:hint="@string/Botton4"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/cardview_light_background"
        android:textColorLink="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/etPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="230dp"
        android:backgroundTint="@color/cardview_light_background"
        android:drawableStart="@drawable/ic_pass_icon_white"
        android:ems="10"
        android:hint="@string/Botton5"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail"
        app:layout_constraintVertical_bias="0.283" />

    <CheckBox
        android:id="@+id/rbSaveSession"
        android:layout_width="140dp"
        android:layout_height="27dp"

        android:layout_marginBottom="4dp"
        android:hint="No cerrar sesion"
        app:layout_constraintBottom_toTopOf="@+id/btLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_bias="0.0"
        />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/botton_rounder"
        android:hint="@string/button"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/holo_red_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btRegisterUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/btRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/botton_rounder"
        android:hint="@string/botton2"
        android:onClick="Registrarse"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_red_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
